# generative-api

./: .env  .gitignore  Dockerfile  README.md  Relese-ddd-pipeline.yml  copy .env.example .env  pyproject.toml  requirements.txt
app/: bank_gemini_erp_helper.py  cv_gemini_files_helper.py  cv_gemini_helper.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  bank_statement.py  chat.py  completions.py  cv.py  cv_v3.py  embeddings.py  files.py  health.py  items.py  nextjob.py  upload.py  users.py
app/api/v2/: router.py
app/core/: cache.py  config.py  cors.py  logging.py  security.py
app/middleware/: cache.py  error_handler.py  request_id.py  timing.py
app/models/: base.py  item.py  user.py
app/prompts/: bank_statement_extract_prompt.py  candidate_ranking_prompt.py  chat.yaml  classify.yaml  nextjobz.yaml  nextjobz_prompt.py  rewrite.yaml  summarize.yaml
app/schemas/: auth.py  chat.py  common.py  file.py  item.py  user.py
app/services/: auth_service.py  cache_service.py  file_service.py  llm_service.py  nextjob_service.py  prompt_service.py
app/utils/: hashes.py  helpers.py  validators.py
credentials/: gemini_keys-erp.json  gemini_keys.json
tests/: conftest.py  test_bank_statement.py  test_chat.py  test_config_and_prompts.py  test_health.py  test_upload.py
