[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fastapi-ai-template"
version = "1.0.0"
description = "Production-ready FastAPI AI backend template"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.18",

    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pydantic[email]>=2.7.0",

    # LLM abstraction
    "litellm>=1.40.0",

    # Caching
    "redis[asyncio]>=5.0.0",

    # Prompts
    "pyyaml>=6.0",
    "jinja2>=3.1.0",

    # HTTP client
    "httpx>=0.27.0",

    # Database (optional; remove if not needed)
    "sqlalchemy>=2.0.0",

    # Security
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
